--- a/manuale.html
+++ b/manuale.html
@@ -18,7 +18,7 @@
                 - Inserisci un valore da 1 a 100; <br>
                 - Usa il pulsante "GENERA" o il tasto "ENTER";<br> 
                 - Usa il mouse per visualizzare le informazioni;<br>
-                - Clicca sulla porzione che vuoi visualizzare;<br><br>
+                - Clicca sulla porzione che vuoi visualizzare.<br><br>
                 Questo è Information Design Lab, questo è un progetto di 8583 cartoline. <br>
                 Questo è un progetto isterico.<br>
             </p>
