Fix UI + text review
added focus on input container when loaded page

--- a/manuale.html
+++ b/manuale.html
@@ -6,6 +6,7 @@
     <title>📖 Manuale 📖</title>
     <link rel="stylesheet" href="manuale_style.css">
     <script src="manuale_script.js" defer></script>
+    <link rel="icon" href="data:,"> <!-- Aggiunto per evitare l'errore del favicon -->
 </head>
 <body>
     <h1 class="title-h1">Manuale</h1> <!-- Titolo -->
@@ -16,7 +17,7 @@
                 <br>[8583 Hysterische Postkarten] è un progetto <br>
                 basato sull'archivio austriaco "Historical Postcards".<br><br>
                 - Inserisci un valore da 1 a 100; <br>
-                - Usa il pulsante "GENERA" o il tasto "ENTER";<br> 
+                - Usa il pulsante "☞ GENERA ☜" o il tasto "ENTER";<br> 
                 - Usa il mouse per visualizzare le informazioni;<br>
                 - Clicca sulla porzione che vuoi visualizzare.<br><br>
                 Questo è Information Design Lab, questo è un progetto di 8583 cartoline. <br>
