--- a/manuale.html
+++ b/manuale.html
@@ -14,13 +14,15 @@
         <img src="" alt="Immagine_Centrata" id="Immagine_Centrata">
         <div class="testo">
             <p>
-                <br>[8583 Hysterische Postkarten] è un progetto <br>
-                basato sull'archivio austriaco "Historical Postcards".<br><br>
+                <br>[8583 Hysterische Postkarten] è un progetto
+                basato sull'archivio austriaco "Historical Postcards".<br>
+                Qui potrai creare collage unici e surreali.<br><br>
                 - Inserisci un valore da 1 a 100; <br>
                 - Usa il pulsante "☞ GENERA ☜" o il tasto "ENTER";<br> 
                 - Usa il mouse per visualizzare le informazioni;<br>
                 - Clicca sulla porzione che vuoi visualizzare.<br><br>
-                Questo è Information Design Lab, questo è un progetto di 8583 cartoline. <br>
+                Questo è Information Design Lab.
+                 Questo è un progetto di 8583 cartoline. <br>
                 Questo è un progetto isterico.<br>
             </p>
         </div>
